# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,16 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import authRouter from "./auth";
+import matchesRouter from "./matches";
+import betsRouter from "./bets";
+import adminRouter from "./admin";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(authRouter);
+router.use(matchesRouter);
+router.use(betsRouter);
+router.use(adminRouter);
 
 export default router;
